fix: Decreases font size on small screens, and shrinks height on medium screens.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+	font-size: 16px;
+}
+
 html,
 body {
 	margin: 0;
@@ -12,4 +16,11 @@ canvas {
 body {
 	background-color: black;
 	color: white;
+}
+
+/* Small screens. */
+@media only screen and (max-width: 750px) {
+	html {
+		font-size: 12px;
+	}
 }
